--- a/index.html
+++ b/index.html
@@ -7,47 +7,49 @@
 </head>
 <body>
 
-<main>
+  <main>
 
-<header>
-  <h1>The Seven Wonders the Ancient World</h1>
-</header>
-
-  <figure>
-    <img src="" alt="">
-  </figure>
-  <h2></h2>
-  <p></p>
-
-  <figure>
-    <img src="" alt="">
-  </figure>
-  <h2>Temple of Artemis</h2>
-  <ul>
-    <li>Construction: Circa 550 BC</li>
-    <li>Builders: Greeks</li>
-    <li>Location: Selçuk, Turkey</li>
-    </ul>
+    <header>
+      <h1>The Seven Wonders the Ancient World</h1>
+    </header>
 
     <figure>
       <img src="" alt="">
+    </figure>
+    <h2></h2>
+    <p></p>
+
+    <figure>
+      <img src="images/temple-of-artemis.jpg" alt="">
+    </figure>
+    <h2>Temple of Artemis</h2>
+    <ul>
+      <li>Construction: Circa 550 BC</li>
+      <li>Builders: Greeks</li>
+      <li>Location: Selçuk, Turkey</li>
+    </ul>
+
+    <figure>
+      <img src="images/colossus-of-rhodes.jpg" alt="">
     </figure>
     <h2>Colossus of Rhodes</h2>
     <ul>
-    <li>Construction: 292–280 BC</li>
-    <li>Builders: Greeks</li>
-    <li>Location: Rhodes, Greece</li>
+      <li>Construction: 292–280 BC</li>
+      <li>Builders: Greeks</li>
+      <li>Location: Rhodes, Greece</li>
     </ul>
 
     <figure>
-      <img src="" alt="">
+      <img src="images/gardens-of-babylon.jpg" alt="">
     </figure>
     <h2>Gardens of Babylon</h2>
     <ul>
-    <li>Construction: Circa 600 BC</li>
-    <li>Builders: Babylonians</li>
-    <li>Location: Nineveh, Iraq</li>
+      <li>Construction: Circa 600 BC</li>
+      <li>Builders: Babylonians</li>
+      <li>Location: Nineveh, Iraq</li>
     </ul>
 
+
+  </main>
 </body>
 </html>
