Change unordered list to description list

--- a/index.html
+++ b/index.html
@@ -23,31 +23,40 @@
       <img src="images/temple-of-artemis.jpg" alt="">
     </figure>
     <h2>Temple of Artemis</h2>
-    <ul>
-      <li>Construction: Circa 550 BC</li>
-      <li>Builders: Greeks</li>
-      <li>Location: Selçuk, Turkey</li>
-    </ul>
+    <dl>
+      <dt>Construction:</dt>
+      <dd>Circa 550 BC</dd>
+      <dt>Builders:</dt>
+      <dd>Greeks</dd>
+      <dt>Location:</dt>
+      <dd>Selçuk, Turkey</dd>
+    </dl>
 
     <figure>
       <img src="images/colossus-of-rhodes.jpg" alt="">
     </figure>
     <h2>Colossus of Rhodes</h2>
-    <ul>
-      <li>Construction: 292–280 BC</li>
-      <li>Builders: Greeks</li>
-      <li>Location: Rhodes, Greece</li>
-    </ul>
+    <dl>
+      <dt>Construction:</dt>
+      <dd>292–280 BC</dd>
+      <dt>Builders:</dt>
+      <dd>Greeks</dd>
+      <dt>Location:</dt>
+      <dd>Rhodes, Greece</dd>
+    </dl>
 
     <figure>
       <img src="images/gardens-of-babylon.jpg" alt="">
     </figure>
     <h2>Gardens of Babylon</h2>
-    <ul>
-      <li>Construction: Circa 600 BC</li>
-      <li>Builders: Babylonians</li>
-      <li>Location: Nineveh, Iraq</li>
-    </ul>
+    <dl>
+      <dt>Construction:</dt>
+      <dd>Circa 600 BC</dd>
+      <dt>Builders:</dt>
+      <dd>Babylonians</dd>
+      <dt>Location:</dt>
+      <dd>Nineveh, Iraq</dd>
+    </dl>
 
 
   </main>
