--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title>Seven Wonders</title>
+  <title>The Seven Wonders of the Ancient World</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link href="css/main.css" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital@0;1&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -14,7 +17,7 @@
     </header>
 
     <figure>
-      <img src="" alt="">
+      <img src="images/the-seven-wonders-of-the-ancient-world.jpg" alt="">
     </figure>
     <h2></h2>
     <p></p>
