Add content and roles and fix html

--- a/index.html
+++ b/index.html
@@ -10,20 +10,21 @@
 </head>
 <body>
 
-  <main>
+  <header role="banner">
+    <h1>The Seven Wonders the Ancient World</h1>
+  </header>
 
-    <header>
-      <h1>The Seven Wonders the Ancient World</h1>
-    </header>
-
+  <main role="main">
     <figure>
-      <img src="images/the-seven-wonders-of-the-ancient-world.jpg" alt="">
+      <img src="images/the-seven-wonders-of-the-ancient-world.jpg" alt="#">
+      <figcaption>
+        <h2>Remarkable constructions of classical antiquity—lost in time</h2>
+      </figcaption>
     </figure>
-    <h2></h2>
-    <p></p>
+    <p>Come explore the ancient wonders with our amazing teleportation technology that jumps you around the world.</p>
 
     <figure>
-      <img src="images/temple-of-artemis.jpg" alt="">
+      <img src="images/temple-of-artemis.jpg" alt="#">
     </figure>
     <h2>Temple of Artemis</h2>
     <dl>
@@ -36,7 +37,7 @@
     </dl>
 
     <figure>
-      <img src="images/colossus-of-rhodes.jpg" alt="">
+      <img src="images/colossus-of-rhodes.jpg" alt="#">
     </figure>
     <h2>Colossus of Rhodes</h2>
     <dl>
@@ -49,7 +50,7 @@
     </dl>
 
     <figure>
-      <img src="images/gardens-of-babylon.jpg" alt="">
+      <img src="images/gardens-of-babylon.jpg" alt="#">
     </figure>
     <h2>Gardens of Babylon</h2>
     <dl>
@@ -60,7 +61,6 @@
       <dt>Location:</dt>
       <dd>Nineveh, Iraq</dd>
     </dl>
-
 
   </main>
 </body>
