--- a/index.html
+++ b/index.html
@@ -12,9 +12,6 @@
 
   <header role="banner">
     <h1>The Seven Wonders the Ancient World</h1>
-  </header>
-
-  <main role="main">
     <figure>
       <img src="images/the-seven-wonders-of-the-ancient-world.jpg" alt="#">
       <figcaption>
@@ -22,45 +19,61 @@
       </figcaption>
     </figure>
     <p>Come explore the ancient wonders with our amazing teleportation technology that jumps you around the world.</p>
+  </header>
 
-    <figure>
-      <img src="images/temple-of-artemis.jpg" alt="#">
-    </figure>
-    <h2>Temple of Artemis</h2>
-    <dl>
-      <dt>Construction:</dt>
-      <dd>Circa 550 BC</dd>
-      <dt>Builders:</dt>
-      <dd>Greeks</dd>
-      <dt>Location:</dt>
-      <dd>Selçuk, Turkey</dd>
-    </dl>
+  <main role="main">
+    <ul class="main-grid">
+      <li>
+        <figure>
+          <img src="images/temple-of-artemis.jpg" alt="#">
+          <figcaption>
+            <h2>Temple of Artemis</h2>
+            <dl>
+              <dt>Construction:</dt>
+              <dd>Circa 550 BC</dd>
+              <dt>Builders:</dt>
+              <dd>Greeks</dd>
+              <dt>Location:</dt>
+              <dd>Selçuk, Turkey</dd>
+            </dl>
+          </figcaption>
+        </figure>
+      </li>
 
-    <figure>
-      <img src="images/colossus-of-rhodes.jpg" alt="#">
-    </figure>
-    <h2>Colossus of Rhodes</h2>
-    <dl>
-      <dt>Construction:</dt>
-      <dd>292–280 BC</dd>
-      <dt>Builders:</dt>
-      <dd>Greeks</dd>
-      <dt>Location:</dt>
-      <dd>Rhodes, Greece</dd>
-    </dl>
+      <li>
+        <figure>
+          <img src="images/colossus-of-rhodes.jpg" alt="#">
+          <figcaption>
+            <h2>Colossus of Rhodes</h2>
+            <dl>
+              <dt>Construction:</dt>
+              <dd>292–280 BC</dd>
+              <dt>Builders:</dt>
+              <dd>Greeks</dd>
+              <dt>Location:</dt>
+              <dd>Rhodes, Greece</dd>
+            </dl>
+          </figcaption>
+        </figure>
+      </li>
 
-    <figure>
-      <img src="images/gardens-of-babylon.jpg" alt="#">
-    </figure>
-    <h2>Gardens of Babylon</h2>
-    <dl>
-      <dt>Construction:</dt>
-      <dd>Circa 600 BC</dd>
-      <dt>Builders:</dt>
-      <dd>Babylonians</dd>
-      <dt>Location:</dt>
-      <dd>Nineveh, Iraq</dd>
-    </dl>
+      <li>
+        <figure>
+          <img src="images/gardens-of-babylon.jpg" alt="#">
+          <figcaption>
+            <h2>Gardens of Babylon</h2>
+            <dl>
+              <dt>Construction:</dt>
+              <dd>Circa 600 BC</dd>
+              <dt>Builders:</dt>
+              <dd>Babylonians</dd>
+              <dt>Location:</dt>
+              <dd>Nineveh, Iraq</dd>
+            </dl>
+          </figcaption>
+        </figure>
+      </li>
+    </ul>
 
   </main>
 </body>
