--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <main role="main">
     <div class="banner">
       <img src="images/the-seven-wonders-of-the-ancient-world.jpg" alt="#">
-      <div>
+      <div class="bottom-left">
         <h2>Remarkable constructions of classical antiquity—lost in time</h2>
         <p>Come explore the ancient wonders with our amazing teleportation technology that jumps you around the world.</p>
       </div>
